--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "core-logger",
-  "version": "0.1.0",
+  "version": "0.1.1-beta1",
   "description": "Simple, extensible logger built around winston. Easy config for Console, File and Loggly logs",
-  "main": "./index.coffee",
+  "main": "./lib/core-logger.js",
   "dependencies":
   {
-    "coffee-script": "^1.9.1",
-    "winston": "1.0.0",
-    "winston-loggly": "1.1.0",
-    "es6-promise": "2.1.1",
+    "winston": "^1.0.0",
+    "winston-loggly": "^1.1.0",
+    "es6-promise": "^2.1.1",
     "lodash": "^3.8.0"
   },
   "devDependencies": {
+    "coffee-script": "^1.9.1",
     "mocha": "^2.2.1",
     "chai": "^2.2.0",
     "nock": "^2.0.1"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register",
-    "tdd":  "./node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register --watch"
+    "tdd":  "./node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register --watch",
+    "prepublish": "coffee -o lib -c src/*.coffee"
   },
   "author": "Harrison Harnisch <hharnisc@gmail.com>",
   "license": "MIT",
