--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies":
   {
     "winston": "^1.0.0",
+    "winston-papertrail":"^1.0.1",
     "winston-loggly": "^1.1.0",
     "es6-promise": "^2.1.1",
     "lodash": "^3.8.0"
