--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "winston": "^1.0.0",
     "winston-papertrail":"^1.0.1",
     "winston-loggly": "^1.1.0",
-    "es6-promise": "^2.1.1",
+    "bluebird": "^2.9.34",
     "lodash": "^3.8.0"
   },
   "devDependencies": {
